[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apex-mev"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
ingress = { path = "../ingress" }
apex-core = { path = "../core" }
strategy = { path = "../strategy" }
solana-program-apex = { path = "../solana-program" }
jito-handler = { path = "../jito-handler" }
risk-oracle = { path = "../risk-oracle" }
safety = { path = "../safety" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
