[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
bytemuck = { workspace = true }
dotenvy = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
