[package]
name = "apex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
num-traits = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
