[package]
name = "ingress"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
bs58 = { workspace = true }
rust_decimal = { workspace = true }
num-traits = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
