[package]
name = "jito-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
curve25519-dalek = "4"
