[package]
name = "safety"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
solana-program-apex = { path = "../solana-program" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
