[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
apex-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
